# ludora

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  patch.diff  patch.diff.save
backend/: .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/apps/authentication/: apps.py  serializers.py  urls.py  views.py
backend/apps/authentication/tests/: test_auth.py
backend/apps/games/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/games/migrations/: 0001_initial.py
backend/apps/games/tests/: conftest.py  test_product_create_api.py  test_product_delete_api.py  test_product_detail_api.py  test_product_list_api.py  test_product_update_api.py
backend/apps/orders/: admin.py  apps.py  exceptions.py  models.py  payment_services.py  payment_views.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_license_key.py  0003_order_order_number_order_paid_at_order_price_paid.py  0004_alter_order_order_number_payment.py  0005_order_user.py
backend/apps/orders/tests/: test_my_orders_api.py  test_order_create_api.py  test_order_model.py  test_order_payment_api.py  test_order_service.py  test_payment_service.py
backend/apps/payments/: apps.py
backend/apps/users/: .models.py.swp  apps.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/orders/: models.py
bot/: Dockerfile  pyproject.toml
bot/app/: main.py
bot/app/handlers/: __init__.py
bot/app/keyboards/: __init__.py
bot/app/services/: __init__.py
(+4 files in other folders)
