[project]
name = "backend"
version = "0.1.0"
description = "Telegram Game Key Store — Django backend"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-filter",
    "ruff>=0.12.0",
    "psycopg[binary]>=3.2",
    "pillow>=11.0",
    "drf-spectacular>=0.30.0",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

# This is an application, not a distributable library, so it should not be
# built/packaged by uv — it only needs a synced virtual environment.
[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
